--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ nltk
 spacy==2.3.5
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 pyresparser
-django==3.1.6
+flask==1.1.2
