--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ spacy==2.3.5
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 pyresparser
 flask==1.1.2
+networkx
+matplotlib
